--- a/src/CSS/App.css
+++ b/src/CSS/App.css
@@ -15,15 +15,33 @@
     --color-dark : #fafafa;
 }
 
+body{
+    margin-top: -30px;
+}
+
+.home-page{
+    width: 100%;
+    height: 100vh;
+    position: relative;
+    color: #212121;
+}
+
+.home-page.dark{
+    background-color: #111130;
+    color: var(--color-dark);
+}
+
 .app-container{
     width: 70%;
     margin: 30px auto;
     display: flex;
     flex-direction: column;
     align-items: center;
+    height: 100vh;
 }
 
 .app-container h1{
     font-size: 7rem;
     position: relative;
+    margin-top: 30px;
 }
