--- a/src/CSS/Todos_List.css
+++ b/src/CSS/Todos_List.css
@@ -7,4 +7,17 @@ p {
     box-shadow: 0 0 5px #212121;
     border-radius: 10px;
     margin-top: 30px;
+    position: relative;
+    height: 300px;
+    overflow-y: scroll;
 }
+
+.curernt-page{
+    position: fixed;
+    font-size: 2rem;
+    padding: 5px;
+    border: 1px solid;
+    right: 0;
+    bottom: 0;
+}
+
