--- a/src/CSS/CSS Dark Mode/SingleTaskDark.css
+++ b/src/CSS/CSS Dark Mode/SingleTaskDark.css
@@ -1,15 +1,25 @@
-.todo-item.dark .del-btn{
+.todo-item.dark .del-btn, .todo-item.dark .change-content-btn{
     background-color: var(--input-background-dark);
     color: #bababa;
 }
 
-.todo-item.dark .del-btn:hover{
+.todo-item.dark .change-content-btn:hover{
     background-color: var(--box-shadow-dark);
     color: var(--color-dark);
 }
 
-.todo-item.dark .del-btn:active{
+.todo-item.dark .change-content-btn:active{
     background-color: #aabbff;
+    color: var(--color-dark);
+}
+
+.todo-item.dark .del-btn:hover{
+    background-color: #FF6969;
+    color: var(--color-dark);
+}
+
+.todo-item.dark .del-btn:active{
+    background-color: #D80032;
     color: var(--color-dark);
 }
 
