--- a/src/CSS/Todos_List.css
+++ b/src/CSS/Todos_List.css
@@ -8,7 +8,7 @@ p {
     border-radius: 10px;
     margin-top: 30px;
     position: relative;
-    height: 300px;
+    max-height: 300px;
     overflow-y: scroll;
 }
 
